crea formularios con los botones

--- a/clase-6/index.html
+++ b/clase-6/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/my-handling-form-page" method="post"></form>
+    <ul>
+        <li>
+          <label for="cantidad">Nombre:</label>
+          <input type="number" id="cantidad" name="cantidad" />
+          <button type="submit" id="Enviar">Enviar</button>
+        </li>
+        <br>
+        <li>
+            <button type="submit" id="resetear">Empezar de nuevo</button>
+        </li>
+    </ul>
+    </form>
+
     <script src="tarea-clase-6.js"></script>
 </body>
 </html>
