crea constantes para integrantes

--- a/clase-6/index.html
+++ b/clase-6/index.html
@@ -11,7 +11,7 @@
         <li>
           <label for="cantidad">Cantidad de integrantes:</label>
           <input type="number" id="cantidad" name="cantidad" />
-          <button type="submit" id="Enviar">Enviar</button>
+          <button type="submit" id="enviar">Enviar</button>
         </li>
         <br>
         <li>
@@ -31,3 +31,4 @@
     <script src="tarea-clase-6.js"></script>
 </body>
 </html>
+
