--- a/clase-6/index.html
+++ b/clase-6/index.html
@@ -20,11 +20,11 @@
         </li>
         <br>
         <li>
-            <button type="submit" id="calcular">Calcular</button>
+            <button type="button" id="calcular">Calcular</button>
         </li>
         <br>
         <li>
-            <button type="submit" id="resetear">Empezar de nuevo</button>
+            <button type="button" id="resetear">Empezar de nuevo</button>
         </li>
     </ul>
 
